Added google form link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Green tea matcha has many benefits, including being a great detox for any toxins in the body and is commonly used in Japan. 
                     Our scrumptious products are made using the finest and highest grade culinary green tea matcha. 
                     Check out our awesome selection of matcha below! </h3>
-                <button>Sign up</button>
+                <button onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfALwGjWpf2ZtKqHUj-R9_g4_Hi4LmTtVB4j1btVRp81sIZwA/viewform';">Order Now</button>
             </div>
 
             <div class="awesome-right">
@@ -46,7 +46,7 @@
         <div class="img-container">
             <div>
                 <img class="imgclass" src="matcha-mochi.jpeg" alt="yellow pudding">
-                <h3>Match Mochi Balls</h3>
+                <h3>Matcha Mochi Balls</h3>
             </div>
             <div >
                 <img class="imgclass" src="matcha-ice-cream.jpeg" alt="yellow pudding">
@@ -74,17 +74,17 @@
     <div class="call-to-action">
         <div class="blue-box">
             <div class="blue-box-text">
-            <h3 class="call">Call to action! It's time!</h3>
-            <h3>Sign up for our product by clicking that button right over there!</h3>
+            <h3 class="call">What are you waiting for? It's time!</h3>
+            <h3>Order our matcha products and get them delivered to your doorstep!</h3>
             </div>
             <div class="blue-box-button">
-            <button>Sign up</button>
+            <button onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfALwGjWpf2ZtKqHUj-R9_g4_Hi4LmTtVB4j1btVRp81sIZwA/viewform';">Order Now</button>
             </div>
         </div>
     </div>
     <div class="footer">
         <footer>
-            Copyright for Odin Project 2022
+            Copyright by Jessica Lauv for Odin Project 2022
         </footer>
     </div>
 
